tests/neg/type_error5.scala
class Main {
  def foo = bar()
  def bar: Int = 0.0 + foo()

  def main = {
    0
  }
}